--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,34 @@ body{
     overflow-x: hidden;
 }
 
-/* body{
-    position: absolute;
-    width: 1584px;
-    height: 1056px;
-    left: calc(50% - 1584px/2);
-    top: calc(50% - 1056px/2);
-    
-} */
+#bouncing{
+    animation: bounceplanet 2s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
+}
+
+@keyframes bounceplanet{ 
+    from { 
+        /* transform: translate3d(0, 0, 0); */
+        scale: 100%;
+    } 
+    to{
+        /* transform: translate3d(20px, 0, 0); */
+        scale: 105%;
+    } 
+}
+
+@keyframes disco{ 
+    from{ 
+        transform: translate3d(0, -20px, 0);
+        /* scale: 100%; */
+    } 
+    to{
+        transform: translate3d(0, 20px, 0);
+        /* scale: 105%; */
+    } 
+}
+
 
 .mainPage{
     height: 100%;
@@ -47,8 +67,8 @@ body{
     justify-content: space-evenly;
     align-items: center;
     /* position: absolute; */
-    z-index: 1;
-    position: relative;
+    z-index: 10;
+    position: sticky;
 
 }
 
@@ -244,6 +264,9 @@ body{
     position: absolute;
     /* height: 20%; */
     z-index: 5;
+    animation: bounceplanet 1s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
 }
 
 
@@ -354,7 +377,6 @@ mainContent #mainBox a:hover{
 
 .Sun{
     /* overflow-x: hidden; */
-
     height: 100%;
     width:100%;
     position: relative;
@@ -363,10 +385,10 @@ mainContent #mainBox a:hover{
     /* object-fit: cover; */
 }
 
-#sunimg{
-    /* width: 100%; */
+/* #sunimg{
+    width: 100%;
     position: relative;
-}
+} */
 
 
 #im2{
@@ -391,8 +413,24 @@ mainContent #mainBox a:hover{
     margin-top: auto;
     position: absolute;
     z-index: 3;
+    animation: down 2s linear;
+    animation-direction:alternate; 
+    animation-iteration-count:infinite;
+    /* animation: bounceplanet 2s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite; */
 }
 
+@keyframes down {
+    from{
+        scale: 100%;
+        transform: translate3d(0, 0, 0);
+    }
+    to{
+        scale: 105%;
+        transform: translate3d(0, 15px, 0); / 
+    }
+}
 
 
 
@@ -495,11 +533,14 @@ mainContent #mainBox a:hover{
     position: absolute;
 }
 
-.Mercury #mimg{
+.Mercury #merimg{
 
     /* height: 100%; */
     /* width: 100%; */
     top: 49%;
+    animation: bounceplanet 2s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
     /* position: relative; */
 }
 
@@ -630,7 +671,11 @@ mainContent #mainBox a:hover{
     font-size: 8vh;
     margin-bottom: 4%;
 }
-
+.vbounce{
+    animation: up 2s; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
+}
 #vencont #main p{
     /* margin-bottom: 4%; */
     /* background-color: palegreen; */
@@ -811,6 +856,9 @@ mainContent #mainBox a:hover{
     position: relative;
     top: 96%;
     left: 50%;
+    animation: bounceplanet 2s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
 }
 
 #mooncont{
@@ -851,6 +899,9 @@ mainContent #mainBox a:hover{
 }
 
 #mooncont #arr{
+    animation: down 2s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
     width: 20%;
     margin-right: 5vw;
     /* background-color: maroon; */
@@ -864,11 +915,17 @@ mainContent #mainBox a:hover{
 } */
 
 #earmoon #emoon{
+    animation: bounceplanet 2s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
     position: absolute;
     bottom: 0;
 }
 
 #earmoon #ebg{
+    animation: bounceplanet 2s linear; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
     bottom: 0;
     position: absolute;
     left: 7%;
@@ -887,6 +944,22 @@ mainContent #mainBox a:hover{
     top: 0;
     left: 10%;
 }
+.mbounce{
+    animation: up 2s; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
+}
+@keyframes up {
+    from{
+        scale: 100%;
+        transform: translate3d(0, 0, 0);
+    }
+    to{
+        scale: 105%;
+        transform: translate3d(0, -15px, 0); / 
+    }
+}
+
 
 .Mars img{
     position: absolute;
@@ -1008,7 +1081,11 @@ mainContent #mainBox a:hover{
     font-weight: 700;
     font-size: 8vh;
 }
-
+.Jupiter #jupig{
+    animation: down 2s linear;
+    animation-direction:alternate; 
+    animation-iteration-count:infinite;
+}
 .Jupiter .mrcard .inf{
     padding-top: 6%;
     /* margin-left: 40%; */
@@ -1186,7 +1263,11 @@ mainContent #mainBox a:hover{
     justify-content: space-around;
     padding: 7%;
 }
-
+.ubounce{
+    animation: up 2s; 
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
 #urcont #cardds{
     /* background-color: palegreen; */
     width: 55%;
@@ -1218,6 +1299,17 @@ mainContent #mainBox a:hover{
     position: absolute;
     bottom: 10%;
     left: 10%;
+}
+
+.nbounce{
+    animation: up 2s; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
+}
+.fbounce{
+    animation: down 2s; 
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
 }
 
 .Neptune #nimg{
@@ -1355,6 +1447,9 @@ mainContent #mainBox a:hover{
     z-index: 1;
 }
 .Footer #futar{
+    animation: disco 3s linear;
+    animation-direction: alternate; 
+    animation-iteration-count: infinite;
     padding: 2%;
     position: absolute;
     z-index: 2;
@@ -1521,4 +1616,220 @@ mainContent #mainBox a:hover{
 
 .fooooot #right h2{
     font-size: 1.5vh;
+}
+
+
+/* Base styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #fff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+}
+
+/* Global Styles */
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+.mainPage {
+    height: 100%;
+    width: 100%;
+    background: radial-gradient(70.59% 105.89% at 95.28% 11.1%, #400A46 0%, #340A41 33.26%, #140A35 93.37%, #100A33 100%);
+}
+
+.nav {
+    padding-top: 2vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+}
+
+#left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+}
+
+#left h1 {
+    padding-left: 2%;
+    font-family: "Orbitron", sans-serif;
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: 5vh;
+}
+
+#mid {
+    width: 50%;
+}
+
+#right {
+    padding-left: 20px;
+    width: 20%;
+}
+
+.mainContent {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.mainContent img {
+    position: absolute;
+}
+
+#mainBox {
+    position: absolute;
+    text-align: center;
+    height: 85%;
+    width: 70%;
+}
+
+#mainBox h1 {
+    font-family: "Orbitron", sans-serif;
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: 11vh;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+}
+
+#mainBox p {
+    margin-bottom: 70px;
+    font-weight: 500;
+    font-size: 2vh;
+}
+
+#mainBox a {
+    text-decoration: none;
+    cursor: pointer;
+    font-family: "Orbitron", sans-serif;
+    font-weight: 600;
+    font-size: 2vh;
+    padding: 2vh;
+    width: 15vw;
+    height: 12vh;
+    border-radius: 5%;
+    background: linear-gradient(315deg, #CD1013 1.19%, #FF0004 1.5%, #2500FF 94.46%);
+}
+
+#mainBox a:hover {
+    font-size: 3vh;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-toggle {
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+    color: white;
+    font-family: "Orbitron", sans-serif;
+    font-weight: 600;
+    font-size: 3vh;
+    padding: 2px 18px;
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: rgba(36, 29, 70, 0.95);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-menu a {
+    font-family: "Orbitron", sans-serif;
+    font-weight: 600;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-menu a:hover {
+    background-color: rgba(83, 79, 111, 0.83);
+    color: aquamarine;
+}
+
+/* Media Queries */
+
+/* Small Devices (Phones) */
+@media (max-width: 600px) {
+    #left h1 {
+        font-size: 4vh;
+    }
+
+    #mainBox h1 {
+        font-size: 8vh;
+    }
+
+    #mainBox a {
+        width: 40vw;
+        height: 15vh;
+        font-size: 2.5vh;
+    }
+
+    .nav {
+        flex-direction: column;
+    }
+
+    #left, #mid, #right {
+        width: 100%;
+    }
+
+    #left, #right {
+        margin-bottom: 20px;
+    }
+}
+
+/* Medium Devices (Tablets) */
+@media (max-width: 900px) {
+    #left h1 {
+        font-size: 4.5vh;
+    }
+
+    #mainBox h1 {
+        font-size: 9vh;
+    }
+
+    #mainBox a {
+        width: 30vw;
+        height: 13vh;
+        font-size: 2.2vh;
+    }
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 1200px) {
+    #left h1 {
+        font-size: 6vh;
+    }
+
+    #mainBox h1 {
+        font-size: 12vh;
+    }
+
+    #mainBox a {
+        width: 12vw;
+        height: 10vh;
+        font-size: 2vh;
+    }
 }
